# syslog-tracing

./: Cargo.toml  ChangeLog  INSTALL  Makefile  NEWS  README.org  THANKS  test-rsyslogd.docker
.github/workflows/: ci.yaml
admin/: cargo-build-test-smoke  run-linters  signoff
src/: error.rs  facility.rs  formatter.rs  layer.rs  lib.rs  rfc5424.rs  tracing.rs  transport.rs
test/: Makefile  check-syslog-tracing  start-rsyslog  test-server
test-rfc-5424/: Cargo.toml  Makefile  README.org
test-rfc-5424/test/: Makefile  check-syslog-tracing  run-tests  test-rsyslogd.docker  test-server
tracing-rfc-5424/: Cargo.toml  README.md  README.org
tracing-rfc-5424/src/: _docs.rs  byte-utils.rs  error.rs  facility.rs  formatter.rs  layer.rs  lib.rs  rfc3164.rs  rfc5424.rs  tracing.rs  transport.rs
