[package]
name = "syslog-tracing"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
backtrace = "0.3.66"
bytes = "1.2.0"
chrono = "0.4.19"
hostname = "0.3.1"
local-ip-address = "0.4.5"
tracing = "0.1.35"
tracing-core = "0.1.28"
tracing-subscriber = "0.3.15"

[features]
# Strictly for testing purposes
rsyslogd = []
