[package]
name = "tracing-rfc-5424"
version = "0.2.0"
edition = "2021"

license = "GPL-3.0-or-later"
description = "A tracing layer that writes to syslog"
homepage = "https://github.com/sp1ff/syslog-tracing"
repository = "https://github.com/sp1ff/syslog-tracing/tracing-rfc-5424"
readme = "README.md"
keywords = ["tracing", "syslog", "rfc-3164", "rfc-5424"]
categories = ["development-tools::debugging"]


[features]
default = ["tracing-log"]
# Enable compatibility with the `log` crate. When enabled, events from the `log` crate
# that are bridged via tracing-log will have their file/line metadata preserved.
tracing-log = ["dep:tracing-log", "tracing-subscriber/tracing-log"]

[dependencies]
backtrace = "0.3.66"
bytes = "1.2.0"
chrono = "0.4.19"
hostname = "0.3.1"
local-ip-address = "0.4.5"
tracing = "0.1.35"
tracing-core = "0.1.28"
tracing-log = { version = "0.2", optional = true }
tracing-subscriber = { version = "0.3.22", default-features = false, features = ["std"] }

[dev-dependencies]
syslog_rfc5424 = "0.9"
tracing-subscriber = { version = "0.3.22", default-features = false, features = ["registry"] }
